<resources>
    <string name="app_name">consAssessment</string>
    <string name="appname2.0">Constems</string>
    <string name="appName3.0">Videorecorder</string>
    <string name="stay_connected">stay connected</string>
    <string name="enter_email_address_and_password">enter email address and password</string>
    <string name="email2">email2</string>
    <string name="pass">password2</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_pass">confirm password</string>
    <string name="wq">signup</string>
    <string name="already_have_an_account_log_in">already have an account log in</string>
    <string name="don_t_have_an_account_signup">don\'t have an account signup</string>
    <string name="log_in">log in</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="please_login_to_continue_using_app">please login to continue using app</string>
    <string name="login_now">login now</string>
    <string name="recording">Recording</string>
    <string name="rec">REc</string>
    <string name="saved">Saved</string>
</resources>